# pieno-smart

./: CICD-CHECKLIST.md  CONTRIBUTING.md  README.md  docker-compose.ci.yml  docker-compose.yml  fuel-prd-postgres-postgis.md  pienosmart-mvp-delivery-blueprint.md
.github/: pull_request_template.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/versions/: 20260427_0001_initial_schema.py  20260429_0002_sync_run_detailed_metrics.py  20260429_0003_user_identity_foundation.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: health.py  stations.py  users.py  vehicle_profiles.py
backend/app/catalog/: schemas.py  service.py
backend/app/core/: config.py
backend/app/db/: session.py  types.py
backend/app/ingestion/: __init__.py  client.py  models.py  normalize.py  parser.py  run.py  service.py
backend/app/jobs/: __init__.py
backend/app/jobs/ingestion/: __init__.py  __main__.py  cli.py  runner.py
backend/app/models/: __init__.py  alert.py  common.py  placeholders.py  price.py  profile.py  station.py  sync_run.py  user.py
backend/app/profiles/: __init__.py  schemas.py  service.py
backend/app/recommendation/: __init__.py  scoring.py
backend/tests/: test_mimit_dataset_client.py  test_mimit_ingestion_integration.py  test_mimit_ingestion_service.py  test_mimit_parser.py  test_recommendation_scoring.py  test_stations_nearby_api.py  test_users_api.py  test_vehicle_profiles_api.py
backend/tests/fixtures/mimit/: anagrafica_live_sample_2026-04-27.csv  anagrafica_sample_v1.csv  prezzo_live_sample_2026-04-27.csv  prezzo_sample_v1.csv  prezzo_sample_v2.csv
database/: .dockerignore  Dockerfile  README.md  alembic-init.sh  init-db.sh
docker-compose/: .env.preprod.example  README.md  docker-compose.preprod.yml
docs/: CI-CD-SETUP.md  README.md  api-contract-outline.md  backend-ingestion-and-data-flow.md  domain-data-contract.md  frontend-ux-and-visual-design.md  (+9 more)
(+51 files in other folders)
